--- a/src/pages/companieDetails.html
+++ b/src/pages/companieDetails.html
@@ -56,6 +56,7 @@
 
   <div  class="bg-gray-100" style="padding-top: 130px;" >
     <div class="max-w-4xl mx-auto p-6">
+
       <div class="bg-white shadow-md rounded-lg overflow-hidden">
         <img id="company-image" class="w-full h-48 object-cover" alt="Company Image" />
         <div class="p-6">
@@ -64,8 +65,26 @@
           <p id="company-industry" class="text-sm text-gray-600 mb-2"></p>
           <p id="company-created" class="text-sm text-gray-600 mb-2"></p>
           <a id="company-website" href="" target="_blank" class="text-blue-500 hover:underline">Visit Website</a>
+
+
+
+          <div class="mt-6">
+            <h3 class="text-xl font-bold text-gray-800 mb-4">Reviews</h3>
+            <ul id="reviews-list" class="space-y-4"></ul>
+          </div>
+
+
         </div>
       </div>
+
+      <button 
+      onclick="goBack()" 
+      class="mb-4 px-4 py-2 bg-blue-500 text-white font-semibold rounded hover:bg-blue-600" style="margin-top: 10px;"
+    >
+      Go Back
+    </button>
+
+
     </div>
   </div>
 
